fix style: crosses were overlapping list of players' border

--- a/app/src/transcendence/static/transcendence/style.css
+++ b/app/src/transcendence/static/transcendence/style.css
@@ -489,7 +489,8 @@ div[id$="game-canvas"]::before {
     border-radius: 10px;
     height: 50%;
 	width: auto;
-	aspect-ratio: 10/15;
+	min-width: 310px;
+	/* aspect-ratio: 10/15; */
     padding: 10px;
 }
 
@@ -506,7 +507,8 @@ div[id$="game-canvas"]::before {
 .registered-player
 {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+	flex-basis: 3%;
 	font-family: VeniteAdoremus, sans-serif;
 }
 
